--- a/architecture-module-library/src/main/res/values/strings.xml
+++ b/architecture-module-library/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="select">Select</string>
+    <string name="okay">Okay</string>
 </resources>
